# open-xdmod-container

./: CMakeLists.txt  README.md
container/: CMakeLists.txt  instance.in
container/Singularity/: xdmod.service.in
dtrmgr/: CMakeLists.txt
slurm-acct-dump/: CMakeLists.txt  slurm-acct-dump.py.in
